// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletWidget Connected address is properly displayed 1`] = `
<div>
  <button
    class="MuiButtonBase-root-34 MuiButton-root-5 MuiButton-outlined-10 MuiButton-outlinedPrimary-11 MuiButton-disableElevation-16"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-6 makeStyles-walletButtonLabel-4"
    >
      0x1..a1a
    </span>
    <span
      class="MuiTouchRipple-root-37"
    />
  </button>
</div>
`;

exports[`WalletWidget Renders correctly 1`] = `
<div>
  <button
    class="MuiButtonBase-root-36 MuiButton-root-7 MuiButton-contained-15 MuiButton-containedPrimary-16 MuiButton-disableElevation-18"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-8 makeStyles-walletButtonLabel-4"
    >
      Connect
    </span>
    <span
      class="MuiTouchRipple-root-39"
    />
  </button>
</div>
`;

exports[`WalletWidget Renders mobile version correctly 1`] = `
<div>
  <button
    class="MuiButtonBase-root-36 MuiButton-root-7 MuiButton-contained-15 MuiButton-containedPrimary-16 MuiButton-disableElevation-18"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-8 makeStyles-walletButtonLabel-4"
    >
      Connect
    </span>
    <span
      class="MuiTouchRipple-root-39"
    />
  </button>
</div>
`;
